# rosbag_recording_services

data_recording/: CMakeLists.txt  package.xml
data_recording/config/: config.yaml
data_recording/scripts/: data_recording.py
